# xscompare

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  materials.py  option4.mac  xscompare.cc  xscompare.mac  xscompare.py
include/: ActionInitialisation.hh  ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc
